--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -6,7 +6,6 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -17,6 +16,10 @@
   --spacing-large: 24px;
 }
 
+html {
+  @apply bg-gray-200 dark:bg-[#2e2e2e];
+}
+
 #root {
   width: 100vw;
   height: 100vh;
@@ -24,24 +27,12 @@
   padding: 0;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  @apply min-h-screen min-w-[320px] flex flex-col;
 }
 
 h1 {
   font-size: 2rem;
   line-height: 1.25;
 }
-
