--- a/backend/app/views/api/v1/admin/reports/_report.html.erb
+++ b/backend/app/views/api/v1/admin/reports/_report.html.erb
@@ -10,6 +10,7 @@
   <td class="border border-gray-400 px-4 py-2"><%= report.reason.presence || "No reason given" %></td>
   <td class="border border-gray-400 px-4 py-2">
     <span
+      id="report-status-<%= report.id %>"
       class="
         px-2 py-1 rounded-full text-white <%= report.status == 'open' ? 'bg-red-500' : 'bg-green-500' %>
       "
@@ -18,18 +19,29 @@
     </span>
   </td>
   <td class="border border-gray-400 px-4 py-2 text-center">
-    <%= link_to "View",
-    api_v1_admin_report_path(report),
-    class: "text-blue-500 hover:text-blue-700" %>
+    <% if Post.where(id: report.post_id).exists? %>
+      <button
+        class="text-blue-500 hover:text-blue-700 view-report"
+        data-report-id="<%= report.id %>"
+        data-post-id="<%= report.post_id %>"
+      >
+        View
+      </button>
+    <% else %>
+      <span class="text-gray-500 italic">Post Deleted</span>
+    <% end %>
     |
-    <%= link_to "Close",
-    close_api_v1_admin_report_path(report),
-    method: :patch,
-    class: "text-red-500 hover:text-red-700",
-    data: {
-      turbo_stream: true,
-      confirm: "Are you sure you want to close this report?",
-    } %>
-
+    <% if report.status == "open" %>
+      <button
+        class="text-red-500 hover:text-red-700 close-report"
+        data-report-id="<%= report.id %>"
+      >
+        Close
+      </button>
+    <% else %>
+      <span class="text-gray-500 " disabled>
+        Closed
+      </span>
+    <% end %>
   </td>
 </tr>
