--- a/backend/app/views/api/v1/admin/reports/index.html.erb
+++ b/backend/app/views/api/v1/admin/reports/index.html.erb
@@ -27,7 +27,7 @@
       <th class="border border-gray-400 px-4 py-2">Actions</th>
     </tr>
   </thead>
-  <tbody>
+  <tbody id="reports_table">
     <%= render @reports %>
   </tbody>
 </table>
