--- a/backend/app/views/layouts/application.html.erb
+++ b/backend/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <!-- JavaScript (Turbo & Hotwire) -->
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
     <%= javascript_importmap_tags %>
+    <%= turbo_include_tags %>
   </head>
   <body class="bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-200">
     <%= yield %>
